FCS-429: Fix timezone bug (#161)